--- a/web/src/main/webapp/index.html
+++ b/web/src/main/webapp/index.html
@@ -25,7 +25,7 @@
   <script type="text/javascript">
     $(function () {
       window.swaggerUi = new SwaggerUi({
-      url: "http://localhost:8080/api-docs",
+      url: "http://0.0.0.0:8080/stemming/api-docs",
       dom_id: "swagger-ui-container",
       supportedSubmitMethods: ['get', 'post', 'put', 'delete'],
       onComplete: function(swaggerApi, swaggerUi){
@@ -66,8 +66,9 @@
 
 <body class="swagger-section">
 <div id='header'>
-  <div class="swagger-ui-wrap">
-  </div>
+  <div class="swagger-ui-wrap"/>
+  <a id="logo" href="http://www.oeg-upm.net">Ontology Engineering Group</a>
+</div>
 </div>
 
 <div id="message-bar" class="swagger-ui-wrap">&nbsp;</div>
